<resources>
    <string name="app_name">Mathest</string>
    <string name="login">Login</string>
    <string name="uid">UID</string>
    <string name="node_users" translatable="false">users</string>
    <string name="submit_details">Submit</string>
    <string name="hint_school">School</string>
    <string name="hint_grade">Grade</string>
    <string name="hint_full_name">Full Name</string>
    <string name="uid_display">Your UID is: </string>
    <string name="signup">sign up</string>
    <string name="accuracy_default">Your accuracy: 100%</string>
    <string name="progress_default">Your progress: 0/10</string>
    <string name="ready_display">Ready to </string>
    <string name="lets_go_text">Let\'s Go!</string>
    <string name="addition_statistics">Addition Test Statistics</string>
    <string name="questions_answered_default">Questions Answered: 0</string>
    <string name="correct_answers_default">Correct answers: 0</string>
    <string name="wrong_answers_default">Wrong answers: 0</string>
    <string name="subtraction_statistics">Subtraction Test Statistics</string>
    <string name="multiplication_statistics">Multiplication Test Statistics</string>
    <string name="division_statistics">Division Test Statistics</string>
    <string name="editor_button">Try in editor</string>
    <string name="workspace_instruction_1">Please press \'Evaluate\' before saving answer</string>
    <string name="workspace_instruction_2">Click on \'Reload\' symbol to reset the canvas</string>
    <string name="question_fetching">Fetching...</string>
    <string name="evaluate">Evaluate</string>
    <string name="question_number_default">Question ??</string>
    <string name="save_progress_button">Save Progress</string>
    <string name="submit_next_button">Submit and Next</string>
    <string name="user_profile">User profile</string>
    <string name="name_display">Name: </string>
    <string name="grade_display">Grade: </string>
    <string name="school_display">School: </string>
    <string name="correct_prompt">Correct!</string>
    <string name="wrong_prompt">Wrong!</string>
    <string name="read_instruction">Please read this!</string>
    <string name="okay_dialog_button">Okay</string>
    <string name="hint_answer_edit_box">Enter Numeric answer</string>
    <string name="question_exhaust_message">Congratulations! You have answered all questions of this category. Please press \'Okay\' and then \'Save progress\' to exit.</string>
    <string name="question_exhaust_title">Questions exhausted!</string>
    <string name="question_number_display">Question </string>
    <string name="add_instruction">Add </string>
    <string name="and"> and </string>
    <string name="subtract_instruction">Subtract </string>
    <string name="from"> from </string>
    <string name="multiply_instruction">Mutliply </string>
    <string name="with"> with </string>
    <string name="divide_instruction">Divide </string>
    <string name="by"> by </string>
    <string name="congratulations_display">Congratulations!"</string>
    <string name="mastered_category_message">You have mastered this category!</string>
    <string name="back_press_message">You can\'t go back from here</string>
    <string name="back_press_title">Please press Save progress to exit</string>
    <string name="no_internet_message">No internet detected</string>
    <string name="provide_answer_hint">Please provide an answer</string>
    <string name="functionality_unavailable">Functionality not available!</string>
    <string name="correct_answer_message">Congratulations! Your answer is correct!</string>
    <string name="working_correct_message">Congratulations! You did it absolutely right!</string>
    <string name="invalid_answer_message">This is not a valid answer! Try again.</string>
    <string name="invalid_uid_message">Please enter a valid UID</string>
    <string name="signup_successful_message">User successfully added</string>
    <string name="name_invalid_message">Please provide Full Name</string>
    <string name="na" translatable="false">NA</string>
    <string name="signup_unsuccessful_message">Unable to add user, please try again...</string>
    <string name="accuracy_display">Your accuracy: </string>
    <string name="progress_display">Your progress: </string>
    <string name="addition_category">Addition</string>
    <string name="subtraction_category">Subtraction</string>
    <string name="multiplication_category">Multiplication</string>
    <string name="division_category">Division</string>
    <string name="questions_answered_display">Questions Answered: </string>
    <string name="correct_answers_display">Correct Answers: </string>
    <string name="wrong_answers_display">Wrong Answers: </string>
    <string name="mathest_heroku_endpoint">http://mathest.herokuapp.com/</string>
    <string name="mathest_azure_endpoint">https://mathest-v1.azurewebsites.net/</string>
    <string name="comment_a1">Hey folk! You misunderstood addition as multiplication! The symbol to be used here is \'+\' and not \'x\'. We\'ve added 3 more questions for you to try and rectify this mistake, all the best!</string>
    <string name="comment_a2">Hey folk! You almost got it correct but missed a carry digit. If sum of two digits of a number is more than 9, the concept of carry comes into the picture. We\'ve added 3 more questions for you to try and rectify this mistake, all the best!</string>
    <string name="comment_a3">Hey folk! 6 is six which means the number of A\'s you see now -> AAAAAA and 9 is nine which is number of A\'s you see now -> AAAAAAAAA. You surely understand 6 to be 9 and 9 to be 6. We\'ve added 3 more questions for you to try and remove this confusion, all the best!</string>
    <string name="comment_a4">Hey folk! 1 is one which means the number of A\'s you see now -> A and 7 is seven which is number of A\'s you see now -> AAAAAAA. You surely understand 1 to be 7 and 7 to be 1. We\'ve added 3 more questions for you to try and remove this confusion, all the best!</string>
    <string name="comment_a5">Hey folk! 6 is six which means the number of A\'s you see now -> AAAAAA and 9 is nine which is number of A\'s you see now -> AAAAAAAAA. 1 is one which means the number of A\'s you see now -> A and 7 is seven which is number of A\'s you see now -> AAAAAAA. You surely understand 1 to be 7, 7 to be 1, 6 to be 9 and 9 to be 6. We\'ve added 3 more questions for you to try and remove these confusions, all the best!</string>
    <string name="comment_a6">Hey folk! You have performed left to right addition, whereas addition is always right to left. We\'ve added 3 more questions for you to try and rectify this mistake, all the best!</string>
    <string name="comment_a7">Hey folk! You have almost got it right, but missed a 0 at the end. You may think that 0 is an insignificant digit. If 0 appears after a digit it is not insignificant. We\'ve added 3 more questions for you to try and remove this confusion, all the best!</string>
    <string name="comment_a8">Hey folk! You have almost got it right, but missed a 0 in middle. You may think that 0 is an insignificant digit. If 0 appears after a digit it is not insignificant. We\'ve added 3 more questions for you to try and remove this confusion, all the best!</string>
    <string name="comment_s1">Hey folk! You misunderstood \'-\' as \'+\' and added the number instead of subtracting them. We\'ve added 3 more questions for you to try and rectify this mistake, all the best!</string>
    <string name="comment_s2">Hey folk! You misunderstood subtraction as division and divided the numbers instead of subtracting them. We\'ve added 3 more questions for you to try and rectify this mistake, all the best!</string>
    <string name="comment_s3">Hey folk! You probably have a problem in borrowing digits. When you take 1 as borrow from a place, the digit at that place reduces by one. We\'ve added 3 more questions for you to try and rectify this mistake, all the best!</string>
    <string name="comment_m1">Hey folk! You have almost got it right, but missed 0 at the end. You may think that 0 is an insignificant digit. If 0 appears after a digit it is not insignificant.  We\'ve added 3 more questions for you to try and remove this confusion, all the best!</string>
    <string name="comment_m2">Hey folk! You misunderstood \'x\' as \'+\' and added the number instead of multiplying them. We\'ve added 3 more questions for you to try and rectify this mistake, all the best!</string>
    <string name="comment_m3">Hey folk! You have a problem in understanding place values and you did the shifting of numbers while adding them after multiplication. We\'ve added 3 more questions for you to try and rectify this mistake, all the best!</string>
    <string name="comment_m4">Hey folk! You misunderstood 0 as 1. 0 x any number is always 0 and 1 x any number is always the number itself. We\'ve added 3 more questions for you to try and remove this confusion, all the best!</string>
    <string name="comment_d1">Hey folk! You have misunderstood division as multiplication. We\'ve added 3 more questions for you to try and rectify this error, all the best!</string>
    <string name="comment_d2">Hey folk! You have almost got it right, but reversed the actual answer. The quotient is to be written left to right and not right to left. We\'ve added 3 more questions for you to try and rectify this error, all the best!</string>
    <string name="comment_d3">Hey folk! You have almost got it right, but missed a 0 in the middle of the quotient. You may think that 0 is an insignificant digit. If 0 appears after a digit it is not insignificant.  We\'ve added 3 more questions for you to try and remove this confusion, all the best!</string>
    <string name="comment_d4">Hey folk! You have divided the number with just one of the digits. You should be dividing it with the complete divisor. We\'ve added 3 more questions for you to try and rectify this error, all the best!</string>
    <string name="comment_d5">Hey folk! You almost got it correct but answered remainder instead of quotient. We\'ve added 3 more questions for you to try and rectify this error, all the best!</string>
    <string name="comment_d6">Hey folk! You have misunderstood division as subtraction. We\'ve added 3 more questions for you to try and rectify this error, all the best!</string>
    <string name="comment_d7">Hey folk! You have misunderstood division as addition. We\'ve added 3 more questions for you to try and rectify this error, all the best!</string>
    <string name="comment_random">We couldn\'t classify the mistake you have made. We are adding 3 more random questions keeping in mind that you went wrong for this question.</string>
</resources>